assets/scss/betterlinks-gutenberg.scss
.btl-link-generator {
	margin-top: 12px !important;
	margin-bottom: 10px !important;
}
.betterlinks-instant-redirect {
	.betterlinks-instant-redirect-form-group {
		display: flex;
		.betterlinks-instant-redirect-form-label {
			min-width: 100px;
			span.pro-badge {
				background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
				color: #fff;
				border-radius: 2px;
				padding: 3px 6px;
				font-size: 10px;
				margin-left: 3px;
				line-height: 1;
				text-transform: uppercase;
				display: inline-flex;
				align-items: center;
				border-radius: 2px;
				transform: translateY(-10px);
			}
		}
		input[type='checkbox'] {
			margin-top: 2px;
			background: #ddd;
		}
		&:not(:last-child) {
			margin-bottom: 10px;
		}
	}
	.MuiFormControl-root.MuiTextField-root {
		width: 100%;
	}
}
.betterlinks-upgradetopro {
	text-align: center;
	h3 {
		color: rgba(0, 0, 0, 0.65);
		font-weight: 600;
		font-size: 27px;
	}
	p {
		a {
			color: #e64942;
			font-weight: 600;
		}
	}
	.btn-close {
		background: #e64942;
		color: #fff;
		padding: 10px 20px;
		border: 0;
		border-radius: 4px;
		cursor: pointer;
		float: right;
	}
}
.ReactModal__Content {
	padding: 60px !important;
	width: 60%;
	@media screen and (max-width: 1599px) {
		width: 75%;
	}
	@media screen and (max-width: 1199px) {
		width: 80%;
	}
	@media screen and (max-width: 650px) {
		padding: 20px !important;
	}
}

//
// gutenberg richtext 'betterlinks format' css -> start

// fixed: in gutenberg edit 'page/post' betterlinks 'add/edit link modal' design breaking (when 'spectra' plugin is activated) start
body.betterlinks-formatting-enabled {
	.ReactModal__Content {
		box-sizing: content-box !important;
		* {
			box-sizing: content-box;
		}

		.btl-entry-content .btl-entry-content-right .link-options * {
			box-sizing: border-box !important;
		}
	}
}
// fixed: in gutenberg edit 'page/post' betterlinks 'add/edit link modal' design breaking (when 'spectra' plugin is activated) end

.btl-url-popover-slot {
	& > .components-popover__content {
		box-shadow: rgb(36 36 36 / 10%) 0px 0px 20px;
	}

	form.btl-links-search-form {
		display: flex;

		.btl-url-search-field.temporary-focus {
			border: 3px solid #2271b199;
		}
		.btl-url-search-field {
			width: 300px;
			color: #555;
			padding: 3px 10px;
			margin-left: 0px;
			border-radius: 0;
			border: none;
			border-right: 1px solid #cecece;

			&:focus {
				box-shadow: none;
				outline: none;
			}

			& > .components-base-control__field {
				margin: 0;
			}

			button.btl-submit-button {
				padding: 5px 0;
			}

			input.components-text-control__input {
				padding: 10px;
				border: 1px solid #ccc;
				margin: 0;
			}
		}
	}

	.betterlinks-format-link-preview-wrapper {
		padding: 4px 10px 6px 10px;
		display: flex;
		align-items: center;

		a {
			display: flex;
			align-items: center;
			flex-grow: 1;
			flex-shrink: 1;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			min-width: 150px;
			max-width: 500px;
			font-size: 14px;

			&:focus {
				box-shadow: none;
				outline: none;
				text-decoration: underline;
			}

			i.btl-visit-url {
				margin-left: 3px;
			}
		}

		button {
			background: none;
			border: none;
			display: flex;
			margin: 0;
			cursor: pointer;
			padding: 0;
			margin-left: 5px;
			color: #b0b2ba;

			&:hover {
				color: #003be2;
			}

			&:focus {
				border: none;
				box-shadow: none;
				outline: none;
			}
		}

		button.betterlinks-format-change-link {
			font-size: 20px;
		}

		button.betterlinks-format-edit-link {
			font-size: 13px;
		}

		button.betterlinks-format-remove-link {
			margin-left: 10px;

			span.dashicons-editor-unlink {
				font-size: 18px;
				display: block;
				align-items: center;
			}
		}
	}
}

.betterlinks-invalid-link-popover {
	.betterlinks_format_invalid_link_warning {
		width: 300px;
		color: red;
		padding: 5px 10px;
		& button {
			padding: 5px 10px;
			margin-left: 10px;
			border: 1px solid #007cba;
			background: #007cba;
			color: #fff;
			border-radius: 3px;
			font-size: 15px;
			cursor: pointer;
			&:hover {
				background: #006ba1;
			}
			&:focus {
				box-shadow: none;
			}
		}
	}
}

ul.betterlinks-suggessions-wrapper-ul {
	margin: 0;
	padding: 10px 0;
	width: 300px;
}

ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li {
	cursor: pointer;
	margin: 0;
	padding: 5px 10px;
}

ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li:hover,
ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li.active {
	background-color: #e3e3e3;
}

.btl-url-popover-slot + .components-popover {
	margin: 0 !important;
}

.btl-url-popover-slot + .components-popover > .components-popover__content {
	margin-left: -18px;
}

span.hl {
	color: #222;
	font-weight: 700;
}

body.betterlinks-formatting-enabled {
	#wpadminbar,
	.interface-interface-skeleton__footer {
		z-index: -1 !important;
	}

	.interface-interface-skeleton__body {
		z-index: 33 !important;
	}

	.interface-interface-skeleton__sidebar,
	#adminmenuwrap,
	#adminmenuback {
		z-index: 0 !important;
	}
}

body.betterlinks-format-link-preview-mounted .btl-url-popover-slot > .components-popover__content {
	overflow: visible !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button,
.betterlinks-expanded-format-options form.betterlinks-format-new-link-form input {
	border-radius: 5px;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form h4 {
	padding: 0 !important;
	margin: 10px 0 !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form input {
	display: block;
	padding: 0px 5px;
	margin-bottom: 5px;
	border: 1px solid #ccc;
	width: 100%;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button {
	border: 1px solid #007cba;
	background: #007cba;
	color: #fff;
	padding: 10px 20px;
	font-size: 15px;
	cursor: pointer;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button:hover {
	background: #006ba1;
}

.betterlinks-expanded-format-options .components-base-control__field {
	margin-bottom: 5px !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button:focus {
	box-shadow: none;
}

svg.betterlinks_logo_svg.betterlinks_logo_svg_gutenberg_format {
	height: 22px !important;
}

a.betterlinks-linked-text {
	display: inline-flex;
	justify-content: center;
	align-items: center;
	&::before {
		content: '';
		background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' id='Layer_1' xmlns='http://www.w3.org/2000/svg' x='0' y='0' viewBox='0 0 104 131' xml:space='preserve' class='betterlinks_logo_svg betterlinks_logo_icon_beside_formatted_richtext' aria-hidden='true' focusable='false'%3E%3Cpath class='betterlinks-logo-svg-paths-style-class-0' d='M81.4 72.3H81h.4z'%3E%3C/path%3E%3Cpath d='M81.4 72.3H81c-2.8-.1-5.5-1.7-6.8-4.4-1.7-3.3-.8-7.3 2-9.6-6.1 3-32.2 15.9-38 18.7l-.8.4c-3.6 1.7-5.4 5.9-3.9 9.9.3.8.8 1.6 1.5 2.3 2.1 2.3 5.3 3 8.1 2.1.2-.1.4-.1.6-.2l1.2-.5 2.3-1c.5-.2 36.8-18 36.8-18 .3-.2.7-.3 1-.5-1.3.5-2.4.8-3.6.8z' style='fill: rgb(255, 31, 31);'%3E%3C/path%3E%3Cpath d='M104 37.8c-.3-5-1.2-9.7-2.8-13.9-.8-2.2-2-4.3-3.4-6.3-1.3-1.8-2.7-3.5-4.3-5.2-4.5-4.8-10-8.2-16.3-10.2C69.7-.2 62-.2 54.3 2.1l-.9.3C49.7 3.6 46.1 5.5 42.7 8c-4.3 3.2-7.8 7.3-10.6 12.1-1.8 3.2-2.9 6.7-3.3 10.6.6-2.2 2-4.1 4.2-5.2 4-2 8.8-.3 10.8 3.6.4.9.7 1.8.8 2.7 0-.3.1-.6.1-.8.7-4.4 3.3-8.1 8.2-11.3 1.9-1.2 3.8-2.2 5.8-2.8 5.1-1.7 10.4-1.4 15.9.8 8.6 3.5 14.3 12.7 13.7 21.8-.3 4.2-1.2 7.4-2.9 10.2-1.8 2.8-4 5.2-6.6 6.9 3.7-1.2 7.8.5 9.6 4 1.9 3.9.4 8.7-3.5 10.6 7.9-3.9 13.9-10.9 16.7-19.3.4-1.2.8-2.4 1.2-3.5.9-3.4 1.3-7 1.2-10.6z' style='fill: rgb(170, 2, 211);'%3E%3C/path%3E%3Cpath class='betterlinks-logo-svg-paths-style-class-3' d='M84.9 71.5c-.1 0 0 0 0 0z'%3E%3C/path%3E%3Cpath d='M88.5 60.8c-1.8-3.6-5.9-5.2-9.6-4-.4.1-.7.3-1.1.4-.6.3-1.1.7-1.6 1.1-2.7 2.3-3.6 6.3-2 9.6 1.3 2.7 4 4.3 6.8 4.4h.4c1.1 0 2.3-.3 3.4-.8 0 0 .1 0 .1-.1 3.9-1.9 5.5-6.7 3.6-10.6z' style='fill: rgb(239, 114, 108);'%3E%3C/path%3E%3Cpath d='M44.7 32c-.1-1.2-.5-2.4-1.3-3.6-2-3.2-6.1-4.5-9.6-3.1-2.6 1-4.3 3.1-4.9 5.5-.3 1.1-.4 2.3-.2 3.4.1.7.4 1.5.7 2.2.8 1.6 2.1 2.8 3.5 3.6 2.2 1.1 4.9 1.2 7.3.1 3.2-1.6 4.9-4.9 4.5-8.1z' style='fill: rgb(255, 120, 120);'%3E%3C/path%3E%3Cpath class='betterlinks-logo-svg-paths-style-class-0' d='M22.6 58.3h.4-.4z'%3E%3C/path%3E%3Cpath d='M70.6 42.7c-1.9-3.9-6.6-5.4-10.5-3.5-.3.2-.6.3-.9.5l-2.3 1c-.5.2-36.8 18-36.8 18-.3.2-.7.3-1 .5 1.1-.5 2.3-.8 3.4-.8h.4c2.8.1 5.5 1.7 6.8 4.4 1.7 3.3.8 7.3-2 9.6 6.1-3 32.2-15.9 38-18.7.4-.1.8-.3 1.2-.5 4-2 5.6-6.6 3.7-10.5z' style='fill: rgb(45, 47, 84);'%3E%3C/path%3E%3Cpath d='M0 92.9c.3 5 1.2 9.7 2.8 13.9.8 2.2 2 4.3 3.4 6.3 1.3 1.8 2.7 3.5 4.3 5.2 4.6 4.8 10.1 8.2 16.3 10.2 7.5 2.4 15.2 2.4 22.9.1l.9-.3c3.7-1.2 7.3-3.1 10.6-5.7 4.3-3.2 7.8-7.3 10.6-12.1 1.8-3.2 2.9-6.7 3.3-10.6-.6 2.2-2 4.1-4.2 5.2-4 2-8.8.3-10.8-3.6-.4-.9-.7-1.8-.8-2.7 0 .3-.1.6-.1.8-.7 4.4-3.3 8.1-8.2 11.3-1.9 1.2-3.8 2.2-5.8 2.8-5.1 1.7-10.4 1.4-15.9-.8-8.5-3.6-14.3-12.8-13.7-21.9.3-4.2 1.2-7.4 2.9-10.2 1.8-2.8 4-5.2 6.6-6.9-3.7 1.2-7.8-.5-9.6-4-1.9-3.9-.4-8.7 3.5-10.6-7.8 3.9-13.9 10.8-16.6 19.3-.4 1.2-.8 2.4-1.2 3.5C.3 85.7-.1 89.3 0 92.9z' style='fill: rgb(8, 71, 249);'%3E%3C/path%3E%3Cpath class='betterlinks-logo-svg-paths-style-class-3' d='M19.1 59.2c.1 0 0 0 0 0z'%3E%3C/path%3E%3Cpath d='M29.8 62.8c-1.3-2.7-4-4.3-6.8-4.4h-.4c-1.1 0-2.3.3-3.4.8 0 0-.1 0-.1.1-3.9 2-5.5 6.7-3.5 10.6 1.8 3.6 5.9 5.2 9.6 4 .4-.1.7-.3 1.1-.4.6-.3 1.1-.7 1.6-1.1 2.6-2.3 3.6-6.3 1.9-9.6z' style='fill: rgb(135, 97, 255);'%3E%3C/path%3E%3Cpath d='M75.2 96.5c-.1-.7-.4-1.5-.7-2.2-.8-1.6-2.1-2.8-3.5-3.6-2.2-1.1-4.9-1.2-7.3-.1-3.1 1.5-4.8 4.8-4.4 8 .1 1.2.5 2.4 1.3 3.6 2 3.2 6.1 4.5 9.6 3.1 2.6-1 4.3-3.1 4.9-5.5.3-1 .3-2.1.1-3.3z' style='fill: rgb(37, 191, 136);'%3E%3C/path%3E%3Cpath d='M75.2 96.5c-.1-.7-.4-1.5-.7-2.2-.8-1.6-2.1-2.8-3.5-3.6-2.2-1.1-4.9-1.2-7.3-.1-3.1 1.5-4.8 4.8-4.4 8 .1 1.2.5 2.4 1.3 3.6 2 3.2 6.1 4.5 9.6 3.1 2.6-1 4.3-3.1 4.9-5.5.3-1 .3-2.1.1-3.3z' style='opacity: 0.12; fill: rgb(8, 71, 249);'%3E%3C/path%3E%3C/svg%3E");
		height: 1em;
		width: 1em;
		display: inline-block;
		background-repeat: no-repeat;
		background-size: 100% 100%;
	}
}

body.betterlinks-loading-spinner-mounted .btl-url-popover-slot {
	height: 100vh !important;
	width: 100vw !important;
	top: 0 !important;
	left: 0 !important;
	right: 0 !important;
	bottom: 0 !important;
	padding: 0 !important;
	margin: 0 !important;
	display: flex !important;
	justify-content: center !important;
	align-items: center !important;
	background: rgba(0, 0, 0, 0.5) !important;
}

body.betterlinks-loading-spinner-mounted .betterlinks-submitted-link-for-gutenberg {
	position: fixed !important;
	top: 0 !important;
	left: 0 !important;
	right: 0 !important;
	bottom: 0 !important;
	padding: 0 !important;
	margin: 0 !important;
	display: flex !important;
	justify-content: center !important;
	align-items: center !important;
}

.betterlinks-submitted-link-for-gutenberg > svg {
	height: 50px !important;
	width: 50px !important;
	color: #000;
}

.betterlinks-link-deleted-after-applying-format h5.no-link-warning-after-added > button {
	padding: 5px 10px;
	border: 1px solid #ccc;
	color: #555;
	border-radius: 5px;
	margin-top: 10px;
	cursor: pointer;
	background: #eee;
}

.betterlinks-link-deleted-after-applying-format h5.no-link-warning-after-added > button:hover {
	background: #ddd;
}

.betterlinks-link-deleted-after-applying-format h5.no-link-warning-after-added {
	font-size: 12px;
	width: 400px;
	color: red;
	padding: 0 20px;
}
// gutenberg richtext 'betterlinks format' css -> end
//

@import './betterlinks.scss';
// @import './common/variable';
// @import './components/modal';

//

